@@ -10,7 +10,6 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
-import java.net.URL;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.FileVisitResult;
@@ -286,7 +285,7 @@ Debug.println("asin: " + asin);
 Debug.println("url: " + url);
 
 
-        InputStream in = new BufferedInputStream(new URL(url).openStream());
+        InputStream in = new BufferedInputStream(URI.create(url).toURL().openStream());
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
         byte[] buffer = new byte[8024];
         int l = 0;
@@ -328,7 +327,7 @@ Debug.println("asin: " + asin);
 Debug.println("url: " + url);
 
 
-        InputStream in = new BufferedInputStream(new URL(url).openStream());
+        InputStream in = new BufferedInputStream(URI.create(url).toURL().openStream());
         ByteArrayOutputStream baos = new ByteArrayOutputStream();
         byte[] buffer = new byte[8024];
         int l = 0;
